envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: public-http
    address:
      socket_address: { address: 0.0.0.0, port_value: 81 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: public-http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: ombi
              domains: ["ombi.charlie-cloud.com", "overseerr.charlie-cloud.com", "download.charlie-cloud.com"]
              routes:
              - route:
                  cluster: overseerr
                  timeout: 0s
                match: { prefix: "/" }
          http_filters:
          - name: envoy.filters.http.router
  - name: public-https
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: ombi
              domains: ["ombi.charlie-cloud.com", "ombi.*", "overseerr.charlie-cloud.com", "overseerr.*"]
              routes:
              - route:
                  cluster: overseerr
                  timeout: 0s
                match: { prefix: "/" }
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: {filename: "/certs/fullchain.pem"}
                private_key: {filename: "/certs/privkey.pem"}
                #validation_context:
                #trusted_ca:
                #filename: certs/cacert.pem
  - name: tailscale-http
    address:
      socket_address: { address: 0.0.0.0, port_value: 79 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: envoy_80
              domains: ["*"]
              routes:
              - route:
                  cluster: envoy_80
                  timeout: 0s
                match: { prefix: "/" }
          http_filters:
          - name: envoy.filters.http.router
  - name: private-http
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: plex
              domains: ["plex.charlie-cloud.com", "plex.*"]
              routes:
              - route:
                  cluster: plex
                  timeout: 0s
                match: { prefix: "/" }
            - name: sonarr
              domains: ["sonarr.charlie-cloud.com", "sonarr.*"]
              routes:
              - route:
                  cluster: sonarr
                  timeout: 0s
                match: { prefix: "/" }
            - name: radarr
              domains: ["radarr.charlie-cloud.com", "radarr.*"]
              routes:
              - route:
                  cluster: radarr
                  timeout: 0s
                match: { prefix: "/" }
            - name: prowlarr
              domains: ["prowlarr.charlie-cloud.com", "prowlarr.*"]
              routes:
              - route:
                  cluster: prowlarr
                  timeout: 0s
                match: { prefix: "/" }
            - name: jellyfin
              domains: ["jellyfin.*"]
              routes:
              - route:
                  cluster: jellyfin
                  timeout: 0s
                match: { prefix: "/" }
            - name: tdarr
              domains: ["tdarr.*"]
              routes:
              - route:
                  cluster: tdarr
                match: { prefix: "/" }
            - name: golinks
              domains: ["golinks.*"]
              routes:
              - route:
                  cluster: golinks
                match: { prefix: "/" }
            - name: jackett
              domains: ["jackett.charlie-cloud.com", "jackett.*"]
              routes:
              - route:
                  cluster: jackett
                  timeout: 0s
                match: { prefix: "/" }
            - name: jackett-private
              domains: ["jackett-private.charlie-cloud.com", "jacket-private.*"]
              routes:
              - route:
                  cluster: jackett-private
                  timeout: 0s
                match: { prefix: "/" }
            - name: readarr
              domains: ["readarr.*"]
              routes:
              - route:
                  cluster: readarr
                  timeout: 0s
                match: { prefix: "/" }
            - name: qbittorrent
              domains: ["qbittorrent.charlie-cloud.com", "qbittorrent.*"]
              routes:
              - route: { cluster: qbittorrent }
                match: { prefix: "/" }
            - name: tautulli
              domains: ["tautulli.charlie-cloud.com", "tautulli.*"]
              routes:
              - route: { cluster: tautulli }
                match: { prefix: "/" }
            - name: calendar
              domains: ["calendar.charlie-cloud.com", "calendar.*"]
              routes:
              - route: { cluster: organizr }
                match: { prefix: "/" }
            - name: organizr
              domains: ["organizr.charlie-cloud.com", "organizr.*"]
              routes:
              - route: { cluster: organizr }
                match: { prefix: "/" }
            - name: bazarr
              domains: ["bazarr.*"]
              routes:
              - route:
                  cluster: bazarr
                  timeout: 0s
                match: { prefix: "/" }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: qbittorrent
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: qbittorrent
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: qbittorrent
                port_value: 8080
  - name: plex
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: plex
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: plex
                port_value: 32400
  - name: sonarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: sonarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sonarr
                port_value: 8989
  - name: radarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: radarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: radarr
                port_value: 7878
  - name: readarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: readarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: readarr
                port_value: 8787
  - name: vpn
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: vpn
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: vpn
                port_value: 8080
  - name: ombi
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ombi
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ombi
                port_value: 3579
  - name: tautulli
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tautulli
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tautulli
                port_value: 8181
  - name: organizr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: organizr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: organizr
                port_value: 80
  - name: jackett
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jackett
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jackett
                port_value: 9117
  - name: jackett-private
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jackett-private
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jackett-private
                port_value: 9117
  - name: bazarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: bazarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: bazarr
                port_value: 6767
  - name: overseerr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: overseerr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: overseerr
                port_value: 5055
  - name: prowlarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: prowlarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: prowlarr
                port_value: 9696
  - name: jellyfin
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jellyfin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jellyfin
                port_value: 8096
  - name: golinks
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: golinks
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: golinks
                port_value: 8000
  - name: tdarr
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tdarr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tdarr
                port_value: 8265
  - name: envoy_80
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: envoy_80
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy
                port_value: 80
